兼容windows