@@ -1,15 +1,16 @@
 package cn.keepbx.jpom.common.commander.impl;
 
-import cn.hutool.core.io.IoUtil;
 import cn.hutool.core.util.CharsetUtil;
-import cn.hutool.core.util.StrUtil;
 import cn.keepbx.jpom.common.commander.Commander;
 import cn.keepbx.jpom.model.ProjectInfoModel;
 
-import java.io.IOException;
-import java.io.InputStream;
+import java.io.File;
 
 public class WindowsCommander extends Commander {
+
+    public WindowsCommander() {
+        charset = CharsetUtil.CHARSET_GBK;
+    }
 
     // 启动
     @Override
@@ -22,48 +23,52 @@ public class WindowsCommander extends Commander {
         String lib = projectInfoModel.getLib();
         String mainClass = projectInfoModel.getMainClass();
         String args = projectInfoModel.getArgs();
-        String javaHome = System.getProperty("java.home");
         String log = projectInfoModel.getLog();
-        String command = String.format("java %s -Dapplication=%s -Djava.ext.dirs=%s;%s/jre/lib/ext %s %s >> %s", jvm, tag, lib, javaHome, mainClass, args, log);
+        String classPath = "";
+        File fileLib = new File(lib);
+        File[] files = fileLib.listFiles();
 
+        // 获取lib下面的所有jar包
+        for (File file : files) {
+            classPath += file.getPath() + ";";
+        }
+
+        String command = String.format("javaw %s -classpath %s -Dapplication=%s -Dbasedir=%s %s %s >> %s", jvm, classPath, tag, lib, mainClass, args, log);
+        System.out.println("===>>" + command);
         // 执行命令
-        Process process = Runtime.getRuntime().exec(command);
-        InputStream is;
-        if (process.waitFor() == 0) {
-            is = process.getInputStream();
-        } else {
-            is = process.getErrorStream();
-        }
-
-        // 读取io为字符串
-        result = IoUtil.read(is, CharsetUtil.CHARSET_UTF_8);
-        is.close();
-        process.destroy();
-        if (StrUtil.isEmpty(result)) {
-            result = "没有返回任何执行结果";
-        }
+        Runtime.getRuntime().exec(command);
+        Thread.sleep(3000);
+        result = status(projectInfoModel.getId());
 
         return result;
     }
 
     // 停止
     @Override
-    public String stop() {
-        return null;
+    public String stop(String tag) throws Exception {
+        // 查询状态，如果正在运行，则执行杀进程命令
+        String result = status(tag);
+        if (result.startsWith("running")) {
+            String pid = result.split(":")[1];
+            String cmd = String.format("taskkill /F /PID %s", pid);
+            Runtime.getRuntime().exec(cmd);
+            Thread.sleep(3000);
+            result = status(tag);
+        }
+
+        return result;
     }
 
     // 重启
     @Override
-    public String restart() {
-        String status = this.status();
+    public String restart(ProjectInfoModel projectInfoModel) throws Exception {
+        String result = status(projectInfoModel.getId());
 
-        return null;
-    }
-
-    // 查看状态
-    @Override
-    public String status() {
-
-        return null;
+        // 如果正在运行，需要先停止
+        if (result.startsWith("running")) {
+            stop(projectInfoModel.getId());
+        }
+        result = start(projectInfoModel);
+        return result;
     }
 }
